tests/ui/control_path_wire_self_send.stderr
error[E0080]: evaluation panicked: wire control messages require cross-role send
 --> $RUST/core/src/panic.rs
  |
  = note: evaluation of `hibana::g::send::<0, 0, hibana::g::Msg<110, hibana::integration::cap::GenericCapToken<LoadBeginKind>>, 0>::{constant#0}` failed here
  |
 ::: src/g.rs
  |
  |                     panic!("wire control messages require cross-role send")
  |                     ------------------------------------------------------- in this macro invocation

note: erroneous constant encountered
 --> src/g.rs
  |
  | /     const {
  | |         if FROM >= crate::global::ROLE_DOMAIN_SIZE as u8 {
  | |             panic!("role index must be < 16");
... |
  | |     }
  | |_____^

note: the above error was encountered while instantiating `fn send::<0, 0, Msg<110, GenericCapToken<LoadBeginKind>>, 0>`
  --> tests/ui/control_path_wire_self_send.rs:15:13
   |
15 |       let _ = g::send::<
   |  _____________^
16 | |         0,
17 | |         0,
18 | |         g::Msg<110, GenericCapToken<LoadBeginKind>>,
19 | |         0,
20 | |     >();
   | |_______^
